implemented bootstrap and style.css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /*
-CSS file
-hej jag heter Carl
+Theme Name: CoolTheme
+Text Domain: CoolTheme
+Version: 1.0
+Description: The coolest theme
+Tags: cool, theme
+Author: Carl Johansson and John Jangard
+Author URI: https://google.com
 */
